# lunavla

./: .dockerignore  .gitattributes  .gitignore  ADVANCED_PROJECT_PATHS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETE_SUMMARY.md  COMPLETION_ANNOUNCEMENT.md  CONTRIBUTING.md  CREATE_PR_GUIDE.md  DATA_CARD.md  FINAL_STATUS_REPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MODEL_CARD.md  PYTHON310_UPGRADE_PLAN.md  README.md  RELEASE_NOTES.md  RELEASE_v1.0.0.md  ROADMAP.md  SECURITY.md  TASK_EXECUTION_SUMMARY.md  WEEK1_4_COMPLETION_REPORT.md  eval_vla.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
configs/: act_pusht_ablation_chunk_size.yaml  act_pusht_baseline.yaml  act_pusht_cpu_smoke.yaml  act_pusht_jsonl_noisy_smoke.yaml  act_pusht_jsonl_smoke.yaml  bc_pusht_cpu_smoke.yaml  bc_pusht_hidden64_smoke.yaml  schema.md
dataset/: __init__.py  action_stats.py  dataset.md  pusht_dataset.py  task_context.py  vla_dataset.py
docs/: controlled_experiments.md  data_pipeline.md  evaluation.md  evidence.md  failure_taxonomy.md  interview_pitch.md  v2_release_dispatcher.md  visual_attributions.md
images/: asset_manifest.json
lunavla/: __init__.py  ablation.py  artifact_contracts.py  cli.py  config.py  contracts.py  engine.py  evidence.py  evidence_design.py  evidence_runner.py  language_tasks.py  lerobot_adapter.py  lerobot_integration.py  manifest.py  memory_data.py  migration.py  numpy_policy.py  published_evidence.py  pusht_env_adapter.py  registry.py  run.py  temporal.py  transformer_policy.py  visual_tasks.py
model/: __init__.py  act_wrapper.py  checkpoint_contract.py  losses.py  minivla_policy.py  policy_base.py  policy_bc.py  policy_io.py
scripts/: build_evidence_pack.py  build_submission_pack.py  build_v11_evidence_snapshot.py  check_environment.py  check_negative_paths.py  check_policy_interface.py  check_project_progress.py  check_readme_assets.py  check_release_readiness.py  check_repo_quality.py  check_reviewer_readiness.py  check_task_layer.py  check_v3_alpha.py  compare_runs.py  create_run_manifest.py  diagnose_run.py  export_pusht_jsonl_dataset.py  export_readme_assets.py  generate_action_chunk_lesson.py  generate_code_walkthrough.py  generate_command_reference.py  generate_config_diff.py  generate_experiment_ledger.py  generate_failure_review.py  generate_first_run_checklist.py  generate_interview_flashcards.py  generate_learning_checkpoint.py  generate_project_card.py  generate_project_report.py  generate_resume_pack.py  generate_showcase_issue.py  generate_skill_evidence_map.py  generate_task_understanding_report.py  generate_troubleshooting_guide.py  generate_v3_diagnostic_image_fixtures.py  generate_visualizations.py  inspect_dataset.py  lock_v2_cpu.py  materialize_v31_smolvlm2.py  migrate_v11_to_v2.py  (+22 more)
tests/: test_config_and_manifest.py  test_core.py  test_dataset.py  test_evaluation.py  test_evidence_scripts.py  test_integration.py  test_license_contract.py  test_losses.py  test_maintenance_workflows.py  test_policies.py  test_utils_and_stats.py  test_v2_lerobot_dispatcher.py  test_v2_release_dispatcher.py
tests_v2/: test_ablation.py  test_artifact_contracts.py  test_config_migration_cli.py  test_config_rc_contract.py  test_cpu_locks.py  test_engine_registry.py  test_evidence.py  test_evidence_cli.py  test_evidence_contracts.py  test_evidence_design_contract.py  test_lerobot_beta.py  test_lerobot_integration.py  test_license_contract.py  test_manifest.py  test_modalities.py  test_public_api_contract.py  test_published_evidence.py  test_release_profile.py  test_run_cli.py  test_transformer_policy.py
tests_v3/: test_act_policy.py  test_alpha2_release_gate.py  test_beta2_adapters.py  test_beta2_contracts.py  test_beta2_integration_workflow.py  test_cli.py  test_code_release.py  test_config_migration.py  test_contracts.py  test_data_engine_artifacts.py  test_diagnostic_contracts.py  test_diagnostic_engine.py  test_diagnostic_workflow.py  test_diffusion_policy.py  test_policy_profiling.py  test_portfolio.py  test_pypi_release.py  test_runner_preflight.py  test_smolvla_adapter.py  test_stable_contracts.py  test_stable_workflow.py  test_v31_conditioned_act.py  test_v31_contracts.py  test_v31_evidence_matrix.py  test_v31_evidence_vertical.py  test_v31_tasks.py  test_v31_vlm.py  test_workflows.py
(+512 files in other folders)
