[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "lunavla"
version = "2.0.0"
description = "Experimental unified engine bridging LunaVLA's NumPy teaching core to VLA research"
readme = "README.md"
requires-python = "==3.12.*"
license = "Apache-2.0"
dependencies = [
  "numpy>=2.0,<2.3",
  "Pillow>=10.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
v2-core = [
  "torch==2.11.*",
  "torchvision==0.26.*",
]
v3-act = [
  "torch==2.11.*",
  "torchvision==0.26.*",
]
v3-diffusion = [
  "torch==2.11.*",
  "torchvision==0.26.*",
  "lerobot[diffusion]==0.6.0",
  "diffusers==0.35.2",
  "transformers==5.5.4",
  "accelerate==1.14.0",
]
v3-smolvla = [
  "torch==2.11.*",
  "torchvision==0.26.*",
  "lerobot==0.6.0",
  "transformers==5.5.4",
  "accelerate==1.14.0",
]
v2 = [
  "torch==2.11.*",
  "torchvision==0.26.*",
  "lerobot[dataset]==0.6.*",
]
v2-integration = [
  "torch==2.11.*",
  "torchvision==0.26.*",
  "lerobot[dataset,pusht]==0.6.*",
  "gym-pusht==0.1.6",
]
dev = [
  "coverage[toml]>=7.6,<8",
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.9,<1",
  "types-PyYAML>=6.0.12",
]
release = [
  "build>=1.2,<2",
  "cyclonedx-bom>=7,<8",
  "twine>=6,<7",
]

[project.scripts]
lunavla-v2 = "lunavla.cli:main"
lunavla-v3 = "lunavla.v3.cli:main"

[tool.setuptools.packages.find]
include = ["dataset*", "lunavla*", "model*", "trainer*"]
exclude = ["tests*", "tests_v2*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests", "tests_v2", "tests_v3"]
pythonpath = ["."]
markers = [
  "integration: end-to-end tests that invoke a CLI or train a policy",
  "torch: tests that require the v2 PyTorch profile",
  "lerobot: tests that require the optional LeRobot adapter",
]

[tool.coverage.run]
relative_files = true
source = ["dataset", "model", "trainer", "eval_vla"]
omit = [
  "dataset/__init__.py",
  "model/__init__.py",
  "trainer/__init__.py",
  "trainer/train_act.py",
  "trainer/train_act_pusht.py",
  "trainer/train_bc_pusht.py",
  "trainer/train_smoke.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "@abstractmethod",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["docs/archive", "outputs", "scripts"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"trainer/train_*.py" = ["E402"]
"eval_vla.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
